1 - IAO Money Payment implemented in the cashout app 2 - Core:     - deployment page template created     - billing_plan added to Service class  3 - Billing:      - CloudBillingPlan class created to manage      - Money sharing for one off and recurring Invoice payment of ikwen Services      - Money sharing for Invoices of customers running a simple billing App.

--- a/accesscontrol/templates/accesscontrol/events/access_granted.html
+++ b/accesscontrol/templates/accesscontrol/events/access_granted.html
@@ -2,9 +2,9 @@
 {% if is_iao %}
     <div style="padding: 0 15px">
         {% if rq.group_name != 'Community' %}
-            <h4>{% trans "New collaborator" %}</h4>
+            <h4 class="text-primary">{% trans "New collaborator" %}</h4>
         {% else %}
-            <h4>{% trans "New member" %}</h4>
+            <h4 class="text-primary">{% trans "New member" %}</h4>
         {% endif %}
         {% with service_url=rq.service.url group_name=rq.group_name %}
         <div class="member" style="border-bottom: none; padding: 15px 0">
