--- a/accesscontrol/templates/accesscontrol/mails/welcome.html
+++ b/accesscontrol/templates/accesscontrol/mails/welcome.html
@@ -1,4 +1,4 @@
-{% extends 'core/mails/../../../../core/templates/core/mails/base.html' %}
+{% extends 'core/mails/base.html' %}
 
 {% block content %}
     <p style="color: #888; font-size: 1.35em; line-height: 1.44em; margin-top: 45px; min-height: 180px; padding: 0 15px; text-align: justify"> {# ACTUAL MESSAGE #}
