--- a/accesscontrol/templates/accesscontrol/events/welcome_event.html
+++ b/accesscontrol/templates/accesscontrol/events/welcome_event.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 <div style="margin-top: -7px; padding: 0 15px">
-    <h4>{% trans "Welcome" %}</h4>
+    <h4 class="text-primary">{% trans "Welcome" %}</h4>
     <p>
         {% blocktrans %}You were happily added to our community. Thank you for joining us.{% endblocktrans %}
     </p>
