--- a/accesscontrol/templates/accesscontrol/mails/password_reset_instructions.html
+++ b/accesscontrol/templates/accesscontrol/mails/password_reset_instructions.html
@@ -1,4 +1,4 @@
-{% extends 'core/mails/../../../../core/templates/core/mails/base.html' %}
+{% extends 'core/mails/base.html' %}
 {% load i18n %}
 
 {% block content %}
