--- a/accesscontrol/templates/accesscontrol/phone_confirmation.html
+++ b/accesscontrol/templates/accesscontrol/phone_confirmation.html
@@ -10,7 +10,7 @@
         #navbar form.search input {display: none}
         #navbar .search, #navbar .navbar-right {display: none}
         #content > div {margin: auto}
-        div#login {background: rgba(255, 255, 255, .9); border-radius: 3px; padding: 1px 20px 30px; width: 300px}
+        div#confirmation {background: rgba(255, 255, 255, .9); border-radius: 3px; padding: 1px 20px 30px; width: 300px}
         #navbar .navbar-brand, #navbar .navbar-brand:hover {display: none}
 
         @media (max-width: 767px) {
@@ -18,15 +18,15 @@
         }
 
         @media (min-width: 768px) {
-            div#login {width: 380px}
+            div#confirmation {width: 380px}
         }
 
         @media (min-width: 992px) {
             #content {margin-top: 10%}
         }
 
-        div#login input {border: 1px solid #bbb;}
-        div#login form {padding: 30px}
+        div#confirmation input {border: 1px solid #bbb;}
+        div#confirmation form {padding: 30px}
         label span {font-weight: normal}
         #content form .hint {color: #8D96C5; font-size: 14px}
         #content form ul.errorlist {padding-left: 0}
@@ -36,15 +36,13 @@
 
 {% block content %}
     <div id="content" class="container">
-        <div id="login">
+        {% if error_message %}
+            <p class="failure" style="font-size: 1em; margin: auto; padding: 9px; width: 360px">{{ error_message }}</p>
+        {% endif %}
+        <div id="confirmation">
             <h3 style="text-align: center"> {% trans "Confirm your phone" %} </h3>
             <p class="text-muted" style="text-align: center"> {% trans "Type the 4 digits code we sent you by SMS" %} </p>
-            <form action="{% url 'phone_confirmation' %}?{{ request.META.QUERY_STRING }}" method="post">{% csrf_token %}
-                {% if login_form.errors %}
-                    <p class="failure" style="font-size: 1em; padding: 9px">{{ error_message }}</p>
-                {% elif request.GET.msg %}
-                    <p class="failure" style="font-size: 1em; padding: 9px">{{ request.GET.msg }}</p>
-                {% endif %}
+            <form class="submit-code" action="{% url 'phone_confirmation' %}?{{ request.META.QUERY_STRING }}" method="post">{% csrf_token %}
                 <div class="form-group" style="margin-top: .4em">
                     <label for="code" class="sr-only">{% trans "Confirmation code" %}</label>
                     <input id="code" class="form-control" type="text" name="code" value="{{ request.GET.username }}{{ request.GET.phone }}" />
@@ -54,10 +52,43 @@
                 </div>
             </form>
             <div style="clear: both; padding-top: 15px; text-align: center">
-                <a href="#">{% trans "Resend confirmation code" %}</a>
+                {% include 'core/snippets/spinner.html' %}
+                <p class="text-muted" style="font-size: 12px">{% trans "Please be patient ! SMS can sometimes take about 1-2 mn to get to you." %}</p>
+                <a class="get-new-code" href="#">{% trans "Resend confirmation code" %}</a>
+                <div class="code-sent" style="display: none">
+                    <i style="font-size: 2em; color: #039B03" class="glyphicon glyphicon-ok"></i>
+                    <p class="text-success">{% trans "A new code was sent to you." %}</p>
+                </div>
+                <p class="code-error text-danger"></p>
             </div>
         </div>
-        <div></div>
         <div class="clear"></div>
     </div>
+{% endblock %}
+{% block js %}
+    {{ block.super }}
+    <script>
+        (function() {
+            $('.submit-code').submit(function() {
+                var code = $('#code').val();
+                if (!/\d{4}/.test(code)) {
+                    alert("{% trans 'Please enter a valid 4 digits code' %}");
+                    return false
+                }
+            });
+            $('.get-new-code').click(function() {
+                $(this).hide();
+                $('div#confirmation .spinner').show();
+                $.getJSON('', {action: 'new_code'}, function(resp) {
+                    $('div#confirmation .spinner').hide();
+                    if (resp.error) {
+                        $('.code-error').text(resp.error).show();
+                        return;
+                    }
+                    $('.code-sent').show();
+                });
+                return false
+            })
+        })()
+    </script>
 {% endblock %}
