Core:   - Type Business and Personal of ConsoleEventType deprecated. Not taken into consideration anymore   - add_event can publish an event to a member or a group   - billing.CloudBillingPlan added to Service
Accesscontol:
  - group_fk_list added to Member
  - business_notices deprecated

 Billing:
   - Default OperatorProfile for billing app only platforms
   - processing_fees introduced to manage billing app only platforms
   - separated_billing_cycle removed from settings and moved to platform Config

--- a/billing/templates/billing/payment_mean_list.html
+++ b/billing/templates/billing/payment_mean_list.html
@@ -102,13 +102,6 @@
                                 <input type="text" id="jp-api-key" name="api_key" class="form-control input-sm" />
                             </div>
                         </div>
-                        <div class="form-group row">
-                            <label for="jp-cert" class="col-sm-5 col-md-4">{% trans "Certificate" %}</label>
-                            <div class="col-sm-7">
-                                <input type="text" id="jp-cert" name="certificate" class="form-control input-sm" />
-                                <p class="text-muted">{% trans "Path to the certificate file" %}</p>
-                            </div>
-                        </div>
                     </form>
                     <div class="row" style="clear: both; padding-top: 1em">
                         <div class="col-xs-12 col-sm-4 col-md-3">
@@ -145,10 +138,8 @@
                 $('div#conf-paypal button.btn-success').data('mean-id', meanId);
             }).on('click', '.conf-jumbopay-momo', function() {
                 var meanId = $(this).parents('.ik-li').data('id'),
-                    APIKey = $(this).parents('.ik-li').data('api_key'),
-                    certificate = $(this).parents('.ik-li').data('certificate');
+                    APIKey = $(this).parents('.ik-li').data('api_key');
                 $('#jp-api-key').val(APIKey);
-                $('#jp-cert').val(certificate);
                 $('div#conf-jumbopay-momo button.btn-success').data('mean-id', meanId);
             }).on('click', '.ik-li.mean .check', function() {
                 var meanId = $(this).parents('.ik-li').data('id'),
@@ -179,8 +170,7 @@
             });
             $('div#conf-jumbopay-momo button.btn-success').click(function() {
                 var credentials = JSON.stringify({
-                    api_key: $('#jp-api-key').val(),
-                    certificate: $('#jp-cert').val()
+                    api_key: $('#jp-api-key').val()
                 }),
                 meanId = $(this).data('mean-id');
                 $.getJSON('{% url 'billing:set_credentials' %}', {mean_id: meanId, credentials: credentials}, function(resp) {
