--- a/core/templates/core/base_bs.html
+++ b/core/templates/core/base_bs.html
@@ -8,7 +8,7 @@
         {% block meta %}{% endblock %}
 		{% block page_title %}{% endblock %}
 		{% block head_style %}
-            <link rel="stylesheet" href="{% static 'ikwen/css/bootstrap.min.css' %}" />
+{#            <link rel="stylesheet" href="{% static 'ikwen/css/bootstrap.min.css' %}" />#}
             <link rel='stylesheet' href="{% static 'ikwen/font-awesome/css/font-awesome.min.css' %}" />
             <link rel='stylesheet' href="{% static 'ikwen/css/flatly.bootstrap.min.css' %}" />
             <link rel='stylesheet' href="{% static 'ikwen/css/base.css' %}" />
