--- a/billing/templates/billing/invoice_detail.html
+++ b/billing/templates/billing/invoice_detail.html
@@ -19,25 +19,25 @@
         #summary {
             margin-bottom: 2em
         }
-        #summary section header {font-size: 1.27em}
-        #summary section div {color: #666; line-height: 21px}
+        table#summary tr td {vertical-align: top}
         #summary p {margin-bottom: 3px}
-        table tr td:last-child {text-align: right}
-        table tr td {border-top: 1px solid #eee; padding: 10px}
+        table {width: 100%}
+        table.grid tr td:first-child {font-weight: 400}
         table tr.em td {background: #f6f6f6}
-        table tr.em1 td {background: #EFF8FF; font-size: 1.45em; padding: 12px 10px}
+        table tr.em1 td {background: #EFF8FF; border: none; font-size: 1.45em; padding: 10px}
         table td em {color: #888}
+        .processing-fees {font-size: .9em; padding-top: 3px}
         #actions {float: right; margin-top: 15px}
     </style>
 {% endblock %}
 
 {% block content  %}
-    <div id="content" class="container" style="margin-top: 15px">
+    <div id="content" class="container">
         <div class="subtle-shade" style="border-radius: 6px; overflow: hidden">
             <header id="main" class="row" data-amount="{{ invoice.amount }}" data-monthly-cost="{{ invoice.service.monthly_cost }}">
                 <div class="col-sm-4">
                     {% if config.logo.name %}
-                        <img src="{{ config.logo.url }}" height="50"/>
+                        <img src="{{ settings.IKWEN_MEDIA_URL }}{{ config.logo.name }}" height="50"/>
                     {% else %}
                         <h2>{{ config.company_name }}</h2>
                     {% endif %}
@@ -45,7 +45,7 @@
                 {% if invoice.status == 'Paid' %}
                     <div class="badge">{% trans "Paid" %}</div>
                 {% else %}
-                    <form id="pay-with" class="col-sm-4 col-sm-offset-4" action="{% url payment_mean_list.0.action_url_name %}" method="post">
+                    <form id="pay-with" class="col-sm-5 col-md-4 pull-right" action="{% url payment_mean_list.0.action_url_name %}" method="post">
                         {% csrf_token %}
                         <input type="hidden" name="invoice_id" value="{{ invoice.id }}" />
                         <input type="hidden" id="extra-months" name="extra_months" value="0" />
@@ -68,59 +68,61 @@
                 <div class="clear"></div>
             </header>
             <div style="background: #fff; padding: 0 15px 15px">
-                <div id="summary" class="row">
-                    <section class="col-sm-4">
-                        <h4>{% trans "Invoice" %} #<strong>{{ invoice.number }}</strong></h4>
-                        <div>
-                            <p>{% trans "Date issued" %}: {{ invoice.date_issued }}</p>
-                            <p>{% trans "Due date" %}: {{ invoice.due_date }}</p>
-                        </div>
-                    </section>
-                    <section class="col-sm-4">
-                        <h4>{% trans "Invoiced To" %}</h4>
-                        <div>
-                            {% if customer_config %}
-                                <p>{{ customer_config.company_name }}</p>
-                                {% if customer_config.address %}<p>{{ customer_config.address }}</p>{% endif %}
-                                <p>{% if customer_config.city %}{{ customer_config.city }},{% endif %}
-                                    {% if customer_config.country %}{{ customer_config.country.name }}{% endif %}</p>
-                            {% else %}
-                                <p>{{ invoice.service.member.get_full_name }}</p>
-                                <p>{{ invoice.service.member.phone }}</p>
-                            {% endif %}
-                        </div>
-                    </section>
-                    <section class="col-sm-4">
-                        <h4>{% trans "Pay To" %}</h4>
-                        <div>
-                            {% if config.company_name %}<p>{{ config.company_name }}</p>{% endif %}
-                            {% if config.address %}<p>{{ config.address }}</p>{% endif %}
-                            {% if config.city %}<p>{{ config.city }}</p>{% endif %}
-                            {% if config.country %}<p>{{ config.country }}</p>{% endif %}
-                        </div>
-                    </section>
-                    <div class="clear"></div>
-                </div>
-                <table id="grid" style="border-collapse: collapse; width: 100%">
+                <table id="summary">
+                    <tr>
+                        <td class="col-sm-4">
+                            <h4>{% trans "Invoice" %} #<strong>{{ invoice.number }}</strong></h4>
+                            <div>
+                                <p>{% trans "Date issued" %}: {{ invoice.date_issued }}</p>
+                                <p>{% trans "Due date" %}: {{ invoice.due_date }}</p>
+                            </div>
+                        </td>
+                        <td class="col-sm-4">
+                            <h4>{% trans "Invoiced To" %}</h4>
+                            <div>
+                                {% if customer_config %}
+                                    <p>{{ customer_config.company_name }}</p>
+                                    {% if customer_config.address %}<p>{{ customer_config.address }}</p>{% endif %}
+                                    <p>{% if customer_config.city %}{{ customer_config.city }},{% endif %}
+                                        {% if customer_config.country %}{{ customer_config.country.name }}{% endif %}</p>
+                                {% else %}
+                                    <p>{{ invoice.service.member.get_full_name }}</p>
+                                    <p>{{ invoice.service.member.phone }}</p>
+                                {% endif %}
+                            </div>
+                        </td>
+                        <td class="col-sm-4">
+                            <h4>{% trans "Pay To" %}</h4>
+                            <div>
+                                {% if config.company_name %}<p>{{ config.company_name }}</p>{% endif %}
+                                {% if config.address %}<p>{{ config.address }}</p>{% endif %}
+                                {% if config.city %}<p>{{ config.city }}</p>{% endif %}
+                                {% if config.country %}<p>{{ config.country }}</p>{% endif %}
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+                <table class="grid" style="border-collapse: collapse">
                     <tr class="em" style="font-size: 1.35em">
-                        <td colspan="3">{% trans "Description" %}</td>
-                        <td style="width: 270px"></td>
-                        <td style="width: 150px">{% trans "Amount" %}</td>
+                        <td colspan="4">{% trans "Description" %}</td>
+                        <td class="numeric">{% trans "Amount" %}</td>
                     </tr>
                     {% if invoice.is_one_off %}
                         {% for entry in invoice.entries %}
                             <tr>
-                                <td colspan="3">
+                                <td colspan="4">
                                     {{ entry.item.label }}
-                                    {% if entry.short_description %}: <em>{{ entry.short_description }}</em>{% endif %}
+                                    {% if entry.short_description %}: <em class="text-muted">{{ entry.short_description }}</em>{% endif %}
                                 </td>
-                                <td class="numeric"> <em class="text-muted">x{{ entry.quantity }}</em> </td>
-                                <td>{{ currency_symbol }} {{ entry.total|intcomma }}</td>
+                                <td class="numeric">
+                                    <span class="pull-left"> <em class="text-muted">x{{ entry.quantity }}</em> </span>
+                                    <span class="pull-right"> {{ currency_symbol }} {{ entry.total|intcomma }} </span>
+                                </td>
                             </tr>
                         {% endfor %}
                     {% else %}
                         <tr>
-                            <td colspan="3">
+                            <td colspan="3" style="padding: 6px">
                                 {{ invoice.service.details|safe }}
                             </td>
                             <td>
@@ -136,37 +138,52 @@
                                     </select>
                                 {% endif %}
                             </td>
-                            <td id="subtotal">{{ currency_symbol }} {{ invoice.amount|intcomma }}</td>
+                            <td class="numeric" id="subtotal">{{ currency_symbol }} {{ invoice.amount|intcomma }}</td>
                         </tr>
                     {% endif %}
                     <tr>
-                        <td colspan="4" style="padding: 2em"></td>
+                        <td colspan="5" style="border: none; padding:1em"></td>
                     </tr>
                     <tr class="em1">
                         <td colspan="4">{% trans "Total" %}</td>
-                        <td id="total">{{ currency_symbol }} {{ invoice.amount|intcomma }}</td>
+                        <td id="total" class="numeric">
+                            <span>{{ currency_symbol }} {{ invoice.amount|intcomma }}</span>
+                        </td>
                     </tr>
+                    {% if invoice.status != 'Paid' and config.processing_fees_on_customer %}
+                        <tr>
+                            <td colspan="5" class="text-muted processing-fees">
+                                + <strong>{{ currency_symbol }} {{ config.ikwen_share_fixed }}</strong> {% trans "Processing fees" %}
+                            </td>
+                        </tr>
+                    {% elif invoice.status == 'Paid' and invoice.processing_fees %}
+                        <tr>
+                            <td colspan="5" class="text-muted processing-fees">
+                                + <strong>{{ currency_symbol }} {{ invoice.processing_fees }}</strong> {% trans "Processing fees" %}
+                            </td>
+                        </tr>
+                    {% endif %}
                     {% if invoice.payment_set.all|length > 0 %}
                         <tr class="dashed-separator">
-                            <td colspan="5">
+                            <td colspan="5" style="border: none">
                                 <div style="border-top: 1px dashed #666"></div>
                             </td>
                         </tr>
                         <tr>
-                            <td colspan="4" style="border-top: none; font-size: 1.35em; padding-top: 12px; text-align: left">{% trans "Payments" %}</td>
+                            <td colspan="5" style="border-top: none; font-size: 1.35em; text-align: left">{% trans "Payments" %}</td>
                         </tr>
                         <tr class="em">
-                            <td colspan="2" style="width: 180px">{% trans "Transaction date" %}</td>
-                            <td style="width: 270px">{% trans "Method" %}</td>
+                            <td colspan="2">{% trans "Transaction date" %}</td>
+                            <td>{% trans "Method" %}</td>
                             <td>{% trans "Transaction ID" %}</td>
-                            <td>{% trans "Amount" %}</td>
+                            <td class="numeric">{% trans "Amount" %}</td>
                         </tr>
                         {% for payment in invoice.payment_set.all %}
                             <tr class="payment">
                                 <td colspan="2">{{ payment.created_on }}</td>
                                 <td>{{ payment.method }}</td>
                                 <td>{{ payment.id }}</td>
-                                <td>{{ currency_symbol }} {{ payment.amount|intcomma }}</td>
+                                <td class="numeric">{{ currency_symbol }} {{ payment.amount|intcomma }}</td>
                             </tr>
                         {% endfor %}
                     {% endif %}
